# gate_project

license_plate_recognition/: CMakeLists.txt  data.yaml  install_opencv_tesseract.sh  run_tests  test_plate_detection  test_preprocessor  yolov8.sh  yolov9.sh
license_plate_recognition/cmake/: FindTesseract.cmake
license_plate_recognition/include/: image_loader.hpp  ocr.hpp  plate_detection.hpp  preprocessing.hpp  preprocessor.hpp
license_plate_recognition/src/: image_loader.cpp  plate_detection.cpp  preprocessing.cpp  preprocessing2.cpp  preprocessor.cpp
license_plate_recognition/testfiles/: test_image_loader.cpp  test_plate_detection.cpp  test_preprocessing.cpp
license_plate_recognition/tests/: .test_preprocessor.cpp.swp  test_preprocessing.cpp  test_preprocessor.cpp
license_plate_recognition/yolov9_env/: pyvenv.cfg
